--- a/card/index.html
+++ b/card/index.html
@@ -31,7 +31,7 @@
           <p>
             "Toda conquista <br>começa com a <br> decisão de tentar."
           </p>
-          <p class="btn">Saiba mais...</p>
+          <p class="btn">Autor Desconhecido</p>
         </div>
       </div>
     </main>
